tests/testsuite/snapshots/testsuite__craftinginterpreters__craftinginterpreters__test__operator__not_class.lox.snap
---
source: tests/testsuite/craftinginterpreters.rs
info:
  program: crabbing-interpreters
  args:
    - craftinginterpreters/test/operator/not_class.lox
---
success: false
exit_code: 1
----- stdout -----

----- stderr -----
UnexpectedToken { expected: [LParen, String, Number, True, False, Nil, Minus, Bang], actual: Token { kind: Class, loc: craftinginterpreters/test/operator/not_class.lox:0..5 } }
